--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,121 @@
+$color1: #00a485;
+$color2: #f1f1f1;
+$color3: #000;
+
 .App {
-  width: 1400px;
+  width: 1000px;
   margin: 100px auto;
   font-family: Arial;
+  padding: 1rem;
+  background: #fafafa;
 }
 
-.task {
-  background: #e2dede;
-  .task__container {
-    display: flex;
-    border: 1px solid #ccc;
-    border-bottom: none;
-    justify-content: space-between;
+.search {
+  position: relative;
 
+  input {
+    width: 100%;
+    height: 45px;
+    border: 1px solid #e4e4e4;
+    border-radius: 3.5px;
+    margin-bottom: 1rem;
+    padding-left: 3rem;
+  }
+
+  button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: none;
+
+    span {
+      font-size: 30px;
+    }
+  }
+}
+
+.data-empty {
+  padding: 1rem;
+  text-align: right;
+}
+
+.table {
+  background: #ffffff;
+  padding: 0 1rem;
+
+  .orange {
+    color: orange;
+  }
+
+  .table-header {
+    display: flex;
+    color: $color1;
+    font-style: italic;
+    padding: 2rem;
+    border-bottom: 1px solid $color2;
 
     div {
-      padding: .5rem 1rem;
-      width: 25%;
-      border-right: 1px solid #ccc;
-      &:last-child {
-        border-right: none;
+      width: 15%;
+      text-align: center;
+
+      b {
+        cursor: pointer;
+
+        span {
+          font-size: 14px;
+        }
+      }
+
+      &:first-child {
+        width: 55%;
+        text-align: left;
+      }
+    }
+  }
+
+  .task-item {
+    display: flex;
+    color: $color3;
+    padding: 2rem;
+    font-size: 16px;
+    border-bottom: 1px solid $color2;
+    cursor: pointer;
+
+    div {
+      width: 15%;
+      text-align: center;
+
+      &:first-child {
+        width: 55%;
+        text-align: left;
       }
     }
 
-  }
-  &:last-child {
-    border-bottom: 1px solid #ccc;;
+    &:hover {
+      box-shadow: 0 0 5px $color3;
+    }
+
+    &:last-child {
+      border-bottom: none;
+    }
   }
 }
 
 .header {
-  background: #000;
+  background: $color3;
   color: white;
 }
 
 .disable {
-  text-decoration: line-through;
+  background: rgb(153, 153, 153);
+  color: white;
+  padding: 0.2rem 1rem;
+  border-radius: 15px;
 }
 
-.blocked {
-  opacity: 0.5;
+.enable {
+  background: $color1;
+  color: white;
+  padding: 0.2rem 1rem;
+  border-radius: 15px;
 }
