--- a/src/scss/_tableHeader.scss
+++ b/src/scss/_tableHeader.scss
@@ -1,27 +1,34 @@
 @import "variables";
 
 .table-header {
-  display: flex;
-  color: $color1;
-  font-style: italic;
-  padding: 2rem;
-  border-bottom: 1px solid $color2;
+  padding: 0 1rem;
+  background: #fff;
 
-  div {
-    width: 15%;
-    text-align: center;
+  .table-header__container {
+    display: flex;
+    color: $color1;
+    font-style: italic;
+    padding: 2rem 0;
+    background: #fff;
+    border-bottom: 1px solid $color2;
 
-    b {
-      cursor: pointer;
+    div {
+      width: 15%;
+      text-align: center;
 
-      span {
-        font-size: 14px;
+      b {
+        cursor: pointer;
+
+        span {
+          font-size: 14px;
+        }
+      }
+
+      &:first-child {
+        width: 55%;
+        text-align: left;
       }
     }
-
-    &:first-child {
-      width: 55%;
-      text-align: left;
-    }
   }
+
 }
