--- a/src/scss/_task.scss
+++ b/src/scss/_task.scss
@@ -1,28 +1,44 @@
 @import "variables";
 
 .task-item {
-  display: flex;
-  color: $color3;
-  padding: 2rem;
-  font-size: 16px;
-  border-bottom: 1px solid $color2;
-  cursor: pointer;
+  padding: 0 1rem;
+  background: #fff;
 
-  div {
-    width: 15%;
-    text-align: center;
+  .task-item__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: $color3;
+    height: 100px;
+    font-size: 16px;
+    background: #fff;
+    border-bottom: 1px solid $color2;
+    cursor: pointer;
 
-    &:first-child {
-      width: 55%;
-      text-align: left;
+    .orange {
+      color: orange;
+    }
+
+    div {
+      width: 15%;
+      text-align: center;
+
+      &:first-child {
+        width: 55%;
+        text-align: left;
+      }
     }
   }
 
-  &:hover {
-    box-shadow: 0 0 5px $color3;
-  }
 
-  &:last-child {
+  &:hover {
+    box-shadow: 0 0 10px $color3;
+    position: relative;
+  }
+}
+
+.task-item:last-child {
+  .task-item__container {
     border-bottom: none;
   }
 }
