--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "tableHeader";
 @import "search";
-@import "task";
+@import "tableRow";
 
 .App {
   width: 1000px;
@@ -16,16 +16,3 @@
   text-align: right;
 }
 
-.disable {
-  background: rgb(153, 153, 153);
-  color: white;
-  padding: 0.2rem 1rem;
-  border-radius: 15px;
-}
-
-.enable {
-  background: $color1;
-  color: white;
-  padding: 0.2rem 1rem;
-  border-radius: 15px;
-}
