--- a/src/scss/_tableRow.scss
+++ b/src/scss/_tableRow.scss
@@ -1,10 +1,10 @@
 @import "variables";
 
-.task-item {
+.table-row {
   padding: 0 1rem;
   background: #fff;
 
-  .task-item__container {
+  .table-row__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,6 +14,20 @@
     background: #fff;
     border-bottom: 1px solid $color2;
     cursor: pointer;
+
+    .disable {
+      background: rgb(153, 153, 153);
+      color: white;
+      padding: 0.2rem 1rem;
+      border-radius: 15px;
+    }
+
+    .enable {
+      background: $color1;
+      color: white;
+      padding: 0.2rem 1rem;
+      border-radius: 15px;
+    }
 
     .orange {
       color: orange;
