--- a/src/scss/_tableHeader.scss
+++ b/src/scss/_tableHeader.scss
@@ -6,29 +6,53 @@
 
   .table-header__container {
     display: flex;
+    justify-content: space-between;
     color: $color1;
     font-style: italic;
     padding: 2rem 0;
     background: #fff;
     border-bottom: 1px solid $color2;
-
-    div {
+    .table-header__item:first-child {
+      width: 55%;
+      justify-content: left;
+    }
+    .table-header__item {
+      display: flex;
+      justify-content: center;
       width: 15%;
-      text-align: center;
+      font-weight: bold;
+      align-items: baseline;
+      cursor: pointer;
 
-      b {
-        cursor: pointer;
+
+      span {
+        font-size: 16px;
+      }
+
+      .table-header__arrows {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        padding-left: 3px;
 
         span {
-          font-size: 14px;
+          font-size: 16px;
+          color: #e4e4e4;
+        }
+
+        .arrow {
+          position: absolute;
+          top: 7px;
+        }
+
+        .active {
+          color: $color1;
         }
       }
 
-      &:first-child {
-        width: 55%;
-        text-align: left;
+      .opacity {
+        opacity: 0;
       }
     }
   }
-
 }
